updating the warehouse fixing logix issue with some methods. worked on the keyclok and refactoring rest of my code